# owl

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CZ-TEST.txt  Doxyfile  README.md  index.html
optix/: Optix.h  (+4 more)
owl/: APIContext.cpp  APIHandle.cpp  APIHandle.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CUDADriver.cpp  CUDADriver.h  Context.cpp  Context.h  Curves.cu  Curves.h  CurvesGeom.cu  CurvesGeom.h  CurvesGeomGroup.cpp  CurvesGeomGroup.h  DeviceContext.cpp  DeviceContext.h  DeviceMemory.h  Geometry.cpp  Geometry.h  Group.cpp  Group.h  InstanceGroup.cpp  InstanceGroup.cu  InstanceGroup.h  LaunchParams.cpp  LaunchParams.h  MissProg.cpp  MissProg.h  Module.cpp  Module.h  Object.cpp  Object.h  ObjectRegistry.cpp  ObjectRegistry.h  RayGen.cpp  RayGen.h  RegisteredObject.cpp  RegisteredObject.h  (+20 more)
owl/abstract/: Context.cpp  Context.h  Object.h  ObjectRegistry.h  RayGen.cpp  SBTObject.h  common.h
owl/api/: APIContext.cpp  APIContext.h  APIHandle.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  DeviceContext.cpp  DeviceContext.h  DeviceMemory.h  Geometry.cpp  Geometry.h  Group.cpp  Group.h  InstanceGroup.cpp  InstanceGroup.h  LaunchParams.cpp  LaunchParams.h  MissProg.cpp  MissProg.h  Module.cpp  Module.h  Object.cpp  Object.h  ObjectRegistry.cpp  RayGen.cpp  RayGen.h  RegisteredObject.h  SBTObject.cpp  SBTObject.h  Texture.cpp  Texture.h  Triangles.cpp  Triangles.cu  Triangles.h  TrianglesGeomGroup.cpp  TrianglesGeomGroup.h  UserGeom.cu  UserGeom.h  (+5 more)
owl/api/helper/: cuda.h  optix.h
owl/cmake/: FindOptiX.cmake  FindTBB.cmake  configure_cuda.cmake  configure_glfw.cmake  configure_optix.cmake  configure_owl.cmake  configure_tbb.cmake  embed_optixir.cmake  embed_ptx.cmake  get_gpu_arch.cmake  run_bin2c.cmake
owl/common/: CMakeLists.txt  owl-common.cpp  owl-common.h  random.h
owl/common/arrayND/: array2D.h  array3D.h
owl/common/cmake/: FindOptiX.cmake  FindTBB.cmake  configure_cuda.cmake  configure_glfw.cmake  configure_optix.cmake  configure_optix6.cmake  configure_owl.cmake  configure_tbb.cmake  configure_viewer.cmake
owl/common/math/: AffineSpace.h  LinearSpace.h  box.h  random.h  vec.h
owl/common/parallel/: parallel_for.h
owl/common/viewerWidget/: CMakeLists.txt  Camera.cpp  Camera.h  FlyMode.cpp  FlyMode.h  GlutWindow.cpp  GlutWindow.h  InspectMode.cpp  InspectMode.h  ViewerWidget.cpp  ViewerWidget.h  gdt_viewer_common.h
owl/helper/: cuda.h  optix.h
owl/include/owl/: ll.h  llowl.h  owl.h  owl_deprecated.h  owl_device.h  owl_device_buffer.h  owl_host.h  pyOWL.h
owl/ll/: Buffers.cpp  Buffers.h  CMakeLists.txt  Device.cpp  Device.h  DeviceGroup.cpp  DeviceGroup.h  DeviceMemory.h  InstanceGroup.cpp  TrianglesGeomGroup.cpp  UserGeomGroup.cpp  c-api.cpp  common.h  cuda.h  deviceAPI.h  llowl.h  optix.h
owl/ll/helper/: cuda.h  optix.h
owl/ng/: CMakeLists.txt
owl/ng/abstract/: Module.h  Object.cpp  RegisteredObject.cpp
owl/ng/api/: APIContext.cpp  APIContext.h  APIHandle.h  impl.cpp
owl/ng/cpp/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Geometry.cpp  Geometry.h  Group.cpp  Group.h  LaunchParams.cpp  LaunchParams.h  MissProg.cpp  MissProg.h  Module.cpp  Module.h  Object.cpp  Object.h  ObjectRegistry.cpp  ObjectRegistry.h  RayGen.cpp  RayGen.h  RegisteredObject.h  SBTObject.cpp  SBTObject.h  Variable.cpp  Variable.h
owl/optix/: Base.h  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  Device.cpp  Device.h  Geometry.h  Group.cpp  Module.cpp  Module.h  Object.h  Optix.h  Program.cpp  Program.h  RayGen.cpp  RayGen.h  RegisteredObject.cpp  RegisteredObject.h  SBTObject.h  Variable.cpp  Variable.h  common.h  device.h  impl.cpp  unsorted.cpp
owl/remove/: Buffers.h  Device.cpp  Device.h  DeviceGroup.cpp  InstanceGroup.cpp
owl/samples/: CMakeLists.txt
owl/sbt/: SBTBuilder.cpp
prime/: CMakeLists.txt
prime/include/owl/: owl_prime.h
prime/owl-prime/: CMakeLists.txt  Context.cu  Context.h  Group.cpp  Group.h  Model.cpp  Model.h  Spheres.cpp  Spheres.h  Triangles.cpp  Triangles.h  deviceCode.cu  deviceCode.h
prime/primer-common/: Context.h  Geom.h  Group.h  Model.h  Object.h  Ray.h  StridedArray.h  emptyFile.cpp  primer.cpp
pyOWL/samples/: CMakeLists.txt  cmd01_simpleTriangles.py  cmd05_rtow.py  compile_ptx.cmake
pyOWL/samples/cmd01-simpleTriangles/: deviceCode.cu  sample.py
pyOWL/samples/cmd05-rtow/: deviceCode.cu  sample.py
pyOWL/samples/cmd05_rtow/: GeomTypes.h  Materials.h
samples/: CMakeLists.txt  c-test.c  deviceCode.cu  llTest.cpp
samples/advanced/: CMakeLists.txt
samples/advanced/optix7course/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp  toneMap.cu
samples/advanced/rtgems2-voxrender/: CMakeLists.txt  README.md  constants.h  deviceCode.cu  deviceCode.h  hostCode.cpp  ogt_vox.h  readVox.h  readVoxOGT.cpp
samples/cmdline/: CMakeLists.txt
samples/cmdline/s00-rayGenOnly/: CMakeLists.txt  hostCode.cpp
samples/cmdline/s01-simpleTriangles/: CMakeLists.txt  hostCode.cpp
samples/cmdline/s05-rtow/: CMakeLists.txt  deviceCode.cu  hostCode.cpp
samples/cmdline/s06-rtow-mixedGeometries/: CMakeLists.txt  deviceCode.cu  hostCode.cpp
samples/cmdline/s07-rtow-multiGPU/: CMakeLists.txt  hostCode.cpp
samples/interactive/: CMakeLists.txt
samples/ll/: CMakeLists.txt
samples/ng/: CMakeLists.txt  c-test.c
samples/prime/: CMakeLists.txt
samples/s00-rayGenOnly/: CMakeLists.txt  deviceCode.h  hostCode.cpp
samples/s01-hello/: hello.cpp
samples/s01-simpleTriangles/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/s02-simpleRayGen/: CMakeLists.txt  deviceCode.cu  simpleRayGen.cpp
samples/s03-rayGenWithParamsAndBuffer/: .#rayGenWithBuffer.cpp  CMakeLists.txt  deviceCode.cu  deviceCode.h  rayGenWithBuffer.cpp
samples/s05-rtow/: CMakeLists.txt  GeomTypes.h  Materials.h  deviceCode.cu  hostCode.cpp
samples/s06-rtow-mixedGeometries/: CMakeLists.txt  deviceCode.cu  hostCode.cpp
samples/s08-sierpinski/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
tests/owl-as-subdirectory/: CMakeLists.txt
(+1175 files in other folders)
